--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,299 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/********************* Shopping Demo-4 **********************/
+html {
+  scroll-behavior: smooth;
+}
+.product-grid4,
+.product-grid4 .product-image4 {
+  position: relative;
+}
+.product-grid4 {
+  font-family: Poppins, sans-serif;
+  text-align: center;
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: 0;
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+  transition: all 0.3s ease 0s;
+}
+.product-grid4:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.product-grid4 .product-image4 a {
+  display: block;
+}
+.product-grid4 .product-image4 img {
+  width: 100%;
+  height: auto;
+}
+.product-grid4 .pic-1 {
+  opacity: 1;
+  transition: all 0.5s ease-out 0s;
+}
+.product-grid4:hover .pic-1 {
+  opacity: 0;
+}
+.product-grid4 .pic-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.5s ease-out 0s;
+}
+.product-grid4:hover .pic-2 {
+  opacity: 1;
+}
+.product-grid4 .social {
+  width: 180px;
+  padding: 0;
+  margin: 0 auto;
+  list-style: none;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease 0s;
+}
+.product-grid4 .social li {
+  display: inline-block;
+  opacity: 0;
+  transition: all 0.7s;
+}
+.product-grid4 .social li:nth-child(1) {
+  transition-delay: 0.15s;
+}
+.product-grid4 .social li:nth-child(2) {
+  transition-delay: 0.3s;
+}
+.product-grid4 .social li:nth-child(3) {
+  transition-delay: 0.45s;
+}
+.product-grid4:hover .social li {
+  opacity: 1;
+}
+.product-grid4 .social li a {
+  color: #222;
+  background: #fff;
+  font-size: 17px;
+  line-height: 36px;
+  width: 40px;
+  height: 36px;
+  border-radius: 2px;
+  margin: 0 5px;
+  display: block;
+  transition: all 0.3s ease 0s;
+}
+.product-grid4 .social li a:hover {
+  color: #fff;
+  background: #4c7a34;
+}
+.product-grid4 .social li a:after,
+.product-grid4 .social li a:before {
+  content: attr(data-tip);
+  color: #fff;
+  background-color: #000;
+  font-size: 12px;
+  line-height: 20px;
+  border-radius: 3px;
+  padding: 0 5px;
+  white-space: nowrap;
+  opacity: 0;
+  transform: translateX(-50%);
+  position: absolute;
+  left: 50%;
+  top: -30px;
+}
+.product-grid4 .social li a:after {
+  content: "";
+  height: 15px;
+  width: 15px;
+  border-radius: 0;
+  transform: translateX(-50%) rotate(45deg);
+  top: -22px;
+  z-index: -2;
+}
+.product-grid4 .social li a:hover:after,
+.product-grid4 .social li a:hover:before {
+  opacity: 1;
+}
+.product-grid4 .product-discount-label,
+.product-grid4 .product-new-label {
+  color: #fff;
+  background-color: #16a085;
+  font-size: 20px;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 45px;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  position: absolute;
+  right: 10px;
+  bottom: 15px;
+  transition: all 0.3s;
+}
+.product-grid4 .product-discount-label {
+  left: auto;
+  right: 10px;
+  top: 15px;
+  background-color: #d7292a;
+}
+.product-grid4 .product-new-label:hover {
+  opacity: 1;
+  cursor: pointer;
+  font-size: 25px;
+  background-color: #159074;
+}
+.product-grid4 .product-content {
+  padding: 5px;
+}
+.product-grid4 .title {
+  font-size: 15px;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin: 0 0 7px;
+  min-height: 35px;
+  transition: all 0.3s ease 0s;
+}
+
+.product-grid4 .title a {
+  color: #222;
+}
+.product-grid4 .title a:hover {
+  color: #4c7a34;
+}
+.product-grid4 .price {
+  color: #4c7a34;
+  font-size: 17px;
+  font-weight: 700;
+  margin: 0 2px 15px 0;
+  display: block;
+}
+.product-grid4 .price span {
+  color: #909090;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 0;
+  text-decoration: line-through;
+  text-align: left;
+  vertical-align: middle;
+  display: inline-block;
+}
+.product-grid4 .add-to-cart,
+button,
+button {
+  border: 1px solid #e5e5e5;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #888;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 4px;
+  transition: all 0.3s;
+}
+button a {
+  color: grey;
+}
+.product-grid4:hover .add-to-cart,
+button:hover,
+button:hover a {
+  border: 1px solid transparent;
+  background: #4c7a34;
+  color: #fff;
+}
+.product-grid4 .add-to-cart:hover {
+  background-color: #505050;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+@media only screen and (max-width: 990px) {
+  .product-grid4 {
+    margin-bottom: 30px;
+  }
+}
+.m-height {
+  min-height: 130px;
+  position: relative;
+  border-top: 1px solid #4c7a34;
+}
+.m-height p {
+  text-align: center !important;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 550px) {
+  .product-grid4 .add-to-cart,
+  button,
+  button {
+    padding: 5px 10px;
+  }
+  h3 .title {
+    min-height: 45px;
+  }
+  .product-grid4 .title {
+    font-size: 13px;
+    line-height: 1;
+  }
+  .product-grid4 .price {
+    font-size: 14px;
+    min-height: 40px;
+  }
+  .col-4 {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .container {
+    padding-right: 2px;
+    padding-left: 2px;
+  }
+  .m-height p {
+    line-height: 1;
+  }
+}
+
+.single-post article .entry-content .m-height-cena p {
+  font-size: 14px;
+  text-align: center;
+}
+
+.separator {
+  width: 100%;
+  height: 100px;
+  background-color: #4c7a34;
+  margin-top: 50px;
+  position: relative;
+}
+
+.separator p {
+  color: white;
+  text-align: center !important;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+}
+
+.hideElement {
+  background-color: rgba(0, 255, 0, 0.2);
 }
